--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- youre not expected to understadn this--->
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -11,12 +12,14 @@
 
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="description" content="CAPITALH DISEÑO Y DESARROLLO WEB" />
+
 
     <!-- Responsive View Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="icon.png" type="image/x-icon">
 
     <!-- Animate.CSS -->
     <link rel="stylesheet" href="css/animate.css">
