--- a/index.html
+++ b/index.html
@@ -8,32 +8,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>comingwa</title>
-
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <title>CAPITAL H</title>
+    <meta name="author" content="C CERVANTES">
     <meta name="description" content="CAPITALH DISEÑO Y DESARROLLO WEB" />
-
-
-    <!-- Responsive View Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Place favicon.ico in the root directory -->
     <link rel="icon" href="icon.png" type="image/x-icon">
-
-    <!-- Animate.CSS -->
     <link rel="stylesheet" href="css/animate.css">
-
-    <!-- Font Aewsome Style -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
-
-    <!-- Bootstrap Style -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
-    <!-- Reset Style -->
     <link rel="stylesheet" href="css/normalize.css">
-
-    <!-- Main Style -->
     <link rel="stylesheet" href="css/main.css">
 
     <!-- Color Switcher Style -->
@@ -75,7 +58,6 @@
 
 <!-- === Header Section === -->
 <div id="container">
-	<!-- +++ Intro Section ++++ -->
     <section class="intro">
     	<!-- Intro Section Background-image -->
     	<div class="intro-image"></div>
@@ -90,15 +72,14 @@
 					<h2 class="text-logo">CAPITAL<br/> H </h2>
 				</div><!-- /End logo -->
 				<!-- ==== Main Heading ==== -->
-				<h1 class="intro-title">We are Comming Soon<span class="obak">!</span></h1>
+				<h1 class="intro-title">We are <br>
+                    currently Creating Something Awesome<span class="obak">!</span></h1>
 
 				<!-- Spin Clock -->
 				<i class="fa fa-clock-o fa-spin fa-4x fa-clock-spin"></i>
-
-				<!-- ====+++ Countdown Timer +++==== -->
 				<ul class="countdown">
 			        <li>
-			            <span class="days">00</span>
+			            <span class="days">70</span>
 			            <p class="days-ref">days</p>
 			        </li>
 			        <li class="seperator"><i class="fa fa-clock-o"></i><br><i class="fa fa-clock-o"></i></li>
@@ -120,7 +101,7 @@
 
 				<!-- ==== Intro Section Sub-Heading ==== -->
 				<div class="intro-subtitle">
-					<p>We are currently Creating Something Awesome.</p>
+					<p>expect us</p>
 				</div>
 
 			</div> <!-- /End Intro Section Content -->
@@ -129,11 +110,11 @@
 		<div class="container-bottom-content">
 			<!-- ==== Social Links ==== -->
 			<div class="social">
-				<a href="https://www.facebook.com"><i class="fa fa-facebook fa-2x fa-social"></i></a>
-				<a href="https://www.twitter.com"><i class="fa fa-twitter fa-2x fa-social"></i></a>
+				<a href="https://twitter.com/CAP1TALH"><i class="fa fa-twitter fa-2x fa-social"></i></a>
 				<a href="https://www.linkedin.com"><i class="fa fa-linkedin fa-2x fa-social"></i></a>
 				<a href="https://www.plus.google.com"><i class="fa fa-google-plus fa-2x fa-social"></i></a>
-			</div> <!-- /End Social Links -->
+			</div>
+            <!-- /End Social Links -->
 
 			<!-- ==== Notify Section ==== -->
 			<div class="notify-after text-center">
