--- a/index.html
+++ b/index.html
@@ -18,25 +18,10 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
-
-    <!-- Color Switcher Style -->
-    <link rel="stylesheet" href="switcher/switcher.css">
     <!-- alternate style start || to use your preferred color, simply remove all style colors below and leave only your preferred color -->
-    <link href="css/colors/dark.css" rel="stylesheet">
-    <link href="css/colors/brick.css" rel="stylesheet">
-    <link href="css/colors/turquoise.css" rel="stylesheet">
-    <link href="css/colors/violet.css" rel="stylesheet">
-    <link href="css/colors/purple.css" rel="stylesheet">
-    <link href="css/colors/pink.css" rel="stylesheet">
-    <link href="css/colors/orange.css" rel="stylesheet">
-    <link href="css/colors/blue-2.css" rel="stylesheet">
-    <link href="css/colors/blue.css" rel="stylesheet">
-    <link href="css/colors/green-2.css" rel="stylesheet">
-    <link href="css/colors/green.css" rel="stylesheet">
-    <link href="css/colors/red-2.css" rel="stylesheet">
+
     <link href="css/colors/red.css" rel="stylesheet">
-    <link href="css/colors/red.css" rel="stylesheet">
-    <link href="css/colors/default-color.css" rel="stylesheet"><!-- alternate style end -->
+    <!-- alternate style end -->
 
     <!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -73,7 +58,7 @@
 				</div><!-- /End logo -->
 				<!-- ==== Main Heading ==== -->
 				<h1 class="intro-title">We are <br>
-                    currently Creating Something Awesome<span class="obak">!</span></h1>
+                    currently Creating Something Awesome<span class="obak">!!!!!</span></h1>
 
 				<!-- Spin Clock -->
 				<i class="fa fa-clock-o fa-spin fa-4x fa-clock-spin"></i>
